--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "angular-mocks": "~1.2.15",
     "bootstrap": "~3.1.1",
     "angular-route": "~1.2.15",
-    "angular-resource": "~1.2.15"
+    "angular-resource": "~1.2.15",
+    "angular-sanitize": "~1.2.16"
   }
 }
